--- a/src/ProcessMonitorWin/ProcessMonitorUI/ProcessMonitorUI.csproj
+++ b/src/ProcessMonitorWin/ProcessMonitorUI/ProcessMonitorUI.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ProcessMonitorService\ProcessMonitorService.csproj" />
+    </ItemGroup>
+
+
 </Project>
